[gd_scene load_steps=16 format=3 uid="uid://dwol50ii0g8c7"]

[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_ytnqi"]
[ext_resource type="Texture2D" uid="uid://d0vy7186xou0s" path="res://assets/spirites/textures/Leonardo_Phoenix_Create_a_vibrant_pixel_art_background_depicti_3.jpg" id="2_xyndo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6sc2h"]
bg_color = Color(0.724264, 0.473534, 0.533415, 0.666667)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uhosc"]
bg_color = Color(0.734503, 0.345754, 0.483595, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e4gau"]
bg_color = Color(1, 0.866667, 1, 0.6)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pxvqe"]
bg_color = Color(0.901961, 0.607843, 0.698039, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sifgi"]
bg_color = Color(0.733333, 0.345098, 0.482353, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k5rfe"]
bg_color = Color(1, 0.866667, 1, 0.6)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n415b"]
bg_color = Color(0.901961, 0.607843, 0.698039, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k1iew"]
bg_color = Color(0.733333, 0.345098, 0.482353, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rmo11"]
bg_color = Color(1, 0.866667, 1, 0.6)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jlyj3"]
bg_color = Color(0.901961, 0.607843, 0.698039, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hn2dw"]
bg_color = Color(0.733333, 0.345098, 0.482353, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d2lpq"]
bg_color = Color(1, 0.866667, 1, 0.6)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2bfty"]
bg_color = Color(0.901961, 0.607843, 0.698039, 1)

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = -13.0
offset_right = 3.0
offset_bottom = -13.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ytnqi")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -160.0
offset_top = -92.0
offset_right = 160.0
offset_bottom = 92.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_xyndo")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -178.0
offset_top = -153.0
offset_right = 178.0
offset_bottom = 153.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_6sc2h")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="grajDalej" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxFlat_uhosc")
theme_override_styles/pressed = SubResource("StyleBoxFlat_e4gau")
theme_override_styles/normal = SubResource("StyleBoxFlat_pxvqe")
text = "Graj dalej"

[node name="restart" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxFlat_sifgi")
theme_override_styles/pressed = SubResource("StyleBoxFlat_k5rfe")
theme_override_styles/normal = SubResource("StyleBoxFlat_n415b")
text = "Restart"

[node name="powrotDoMenu" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxFlat_k1iew")
theme_override_styles/pressed = SubResource("StyleBoxFlat_rmo11")
theme_override_styles/normal = SubResource("StyleBoxFlat_jlyj3")
text = "Menu"

[node name="wyjdz" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxFlat_hn2dw")
theme_override_styles/pressed = SubResource("StyleBoxFlat_d2lpq")
theme_override_styles/normal = SubResource("StyleBoxFlat_2bfty")
text = "Wyjscie"

[connection signal="pressed" from="PanelContainer/VBoxContainer/grajDalej" to="." method="_on_graj_dalej_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/powrotDoMenu" to="." method="_on_powrot_do_menu_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/wyjdz" to="." method="_on_wyjdz_pressed"]
